# menoh

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BUILDING.md  CMakeLists.txt  LICENSE  LICENSE_THIRD_PARTY  README.md  annotated.html  appveyor.yml  build_android_aarch64.sh  build_android_aarch64_opencl.sh  classes.html  classmenoh_1_1error.html  classmenoh_1_1model-members.html  classmenoh_1_1model.html  classmenoh_1_1model__builder.html  classmenoh_1_1model__data-members.html  classmenoh_1_1model__data.html  classmenoh_1_1variable__profile__table-members.html  classmenoh_1_1variable__profile__table.html  classmenoh_1_1variable__profile__table__builder-members.html  classmenoh_1_1variable__profile__table__builder.html  dir_9958784d3d63549ac595a1414273b952.html  dir_d44c64559bbebec7f509842c48db8b23.html  functions.html  functions_func.html  functions_vars.html  gen_benchmark_data.py  gen_graph_completion_hpp.py  gen_test_data.py  getting__started_8md.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  (+29 more)
benchmark/: CMakeLists.txt  vgg16_benchmark.cpp  vgg16_benchmark.py
example/: CMakeLists.txt  densnet121_example_in_cpp.cpp  general_cnn_example_in_cpp.cpp  inception_v1_example_in_cpp.cpp  inception_v2_example_in_cpp.cpp  mkldnn_vgg16_example_in_cpp.cpp  mobilenet_example_in_cpp.cpp  resnet50_example_in_cpp.cpp  shufflenet_example_in_cpp.cpp  squeezenet_example_in_cpp.cpp  tensorrt_vgg16_example_in_cpp.cpp  vgg16_example_in_c.c  vgg16_example_in_cpp.cpp  vgg16_example_in_tensorrt_cpp.cpp  vgg19_example_in_cpp.cpp
example_arm/: CMakeLists.txt  resnet50_example_in_cpp.cpp  vgg16_example_in_c_arm.c  vgg16_example_in_cpp_arm.cpp  vgg19_example_in_cpp.cpp
include/: CMakeLists.txt  menoh.pc.in
include/menoh/: menoh.h  menoh.hpp
menoh/: CMakeLists.txt  any.hpp  array.cpp  array.hpp  attribute_completion_and_shape_inference.hpp  backend_config.hpp  dims.cpp  dims.hpp  dtype.cpp  dtype.hpp  exception.hpp  graph.cpp  graph.hpp  json.hpp  make_unique.hpp  menoh.cpp  menoh.map  menoh_impl.hpp  model.cpp  model.hpp  model_core.cpp  model_core.hpp  model_core_factory.cpp  model_core_factory.hpp  model_data.hpp  node.cpp  node.hpp  onnx.cpp  onnx.hpp  optional.hpp  utility.hpp  variant.hpp  version.h.in
menoh/arm/: ArmnnInference.cpp  ArmnnInference.hpp  IMenohParser.hpp  MenohParser.cpp  MenohParser.hpp  README.md  model_core.cpp  model_core.hpp
menoh/armnn/: ArmnnInference.cpp  ArmnnInference.hpp  Inference.cpp  Inference.hpp  MenohParser.cpp  MenohParser.hpp  Parser.cpp  Parser.hpp  README.md  model_core.cpp  model_core.hpp
menoh/combinated_backends/: context.hpp  logger.hpp  model_core.cpp  model_core.hpp  procedure.hpp
menoh/combinated_backends/backend/generic/: generic_context.cpp  generic_context.hpp  operator.hpp
menoh/combinated_backends/backend/generic/operator/: mul.hpp  relu.hpp  sigmoid.hpp  transpose.hpp
menoh/combinated_backends/backend/mkldnn/: formatted_array.hpp  memory_cache.cpp  memory_cache.hpp  memory_conversion.cpp  memory_conversion.hpp  mkldnn_context.cpp  mkldnn_context.hpp  operator.hpp  procedure_factory.hpp
menoh/combinated_backends/backend/mkldnn/operator/: batch_norm.hpp  conv.hpp  eltwise.hpp  gemm.hpp  output_management.hpp  pool.hpp  softmax.hpp  sum.hpp
menoh/composite_backend/: context.hpp  logger.hpp  model_core.cpp  model_core.hpp  procedure.hpp
menoh/composite_backend/backend/generic/: generic_context.cpp  generic_context.hpp  operator.hpp
menoh/composite_backend/backend/generic/operator/: constant.hpp  (+6 more)
menoh/composite_backend/backend/mkldnn/: formatted_array.hpp  memory_cache.cpp  memory_cache.hpp  memory_conversion.cpp  memory_conversion.hpp  mkldnn_context.cpp  mkldnn_context.hpp  operator.hpp  procedure_factory.hpp
menoh/hash/: hasher.cpp  hasher.hpp  sha1.cpp  sha1.h
menoh/mkldnn/: model_core.cpp  model_core.hpp  operator.hpp  primitive_factory_return_type.hpp  utility.cpp  utility.hpp
menoh/mkldnn/operator/: add.cpp  add.hpp  batch_norm.cpp  batch_norm.hpp  common.hpp  concat.cpp  concat.hpp  conv.cpp  conv.hpp  conv_transpose.cpp  conv_transpose.hpp  eltwise.cpp  eltwise.hpp  fc.cpp  fc.hpp  gemm.cpp  gemm.hpp  lrn.cpp  lrn.hpp  pool.cpp  pool.hpp  softmax.cpp  softmax.hpp  sum.cpp  sum.hpp
menoh/mkldnn_with_generic_fallback/: computation_node_factory.hpp  context.hpp  logger.hpp  model_core.cpp  model_core.hpp  procedure.hpp
menoh/mkldnn_with_generic_fallback/backend/generic/: generic_context.cpp  generic_context.hpp  operator.hpp
menoh/mkldnn_with_generic_fallback/backend/mkldnn/: formatted_array.hpp  memory_cache.cpp  memory_cache.hpp  memory_conversion.cpp  memory_conversion.hpp  mkldnn_context.cpp  mkldnn_context.hpp  operator.hpp  procedure_factory.hpp
menoh/naive/: computation_node.hpp  computation_node_factory.hpp  model_core.cpp  model_core.hpp
menoh/naive/operator/: add.cpp  add.hpp  average_pool.cpp  average_pool.hpp  concat.cpp  concat.hpp  elu.cpp  elu.hpp  gemm.cpp  gemm.hpp  index_conversion.hpp  leaky_relu.cpp  leaky_relu.hpp  max_pool.cpp  max_pool.hpp  relu.cpp  relu.hpp  softmax.cpp  softmax.hpp  sum.cpp  sum.hpp  tanh.cpp  tanh.hpp
menoh/nonstd/: any.hpp  variant.hpp
menoh/onnxifi/: model_core.hpp
menoh/tensorrt/: Exception.cpp  Exception.hpp  GraphTopologicalSort.hpp  Inference.cpp  Inference.hpp  MenohParser.cpp  MenohParser.hpp  Parser.cpp  Parser.hpp  README.md  Tensor.cpp  Tensor.hpp  TensorRTInference.cpp  TensorRTInference.hpp  TensorRTUtil.hpp  TypesUtils.hpp  Util.hpp  cuda_memory.cpp  cuda_memory.hpp  host_memory.hpp  model_core.cpp  model_core.hpp
test/: CMakeLists.txt  array.cpp  attribute_completion_and_shape_inference.cpp  backend.cpp  backend.hpp  common.hpp  graph.cpp  mkldnn.cpp  mkldnn_with_generic_fallback_backend.cpp  model.cpp  model_data.cpp  model_data_completion.cpp  node.cpp  np_io.cpp  np_io.hpp  onnx.cpp  operator.cpp  vgg16.cpp
test/script/: gen_add_result.py  gen_concat_result.py  gen_op_result.py  make_random_data.py
tool/: CMakeLists.txt  onnx_viewer.cpp
(+159 files in other folders)
